# screenshot-capture

./: .gitignore  README.md  pyproject.toml
screenshot_capture/: cli.py  ffmpeg.py  timeutil.py
